syntax = "proto3";

package v1.registry;

option go_package = "vc/internal/gen/registry/apiv1_registry";

service RegistryService {
    // Token Status List operations
    rpc TSLAddStatus (TSLAddStatusRequest) returns (TSLAddStatusReply) {}
    rpc TSLUpdateStatus (TSLUpdateStatusRequest) returns (TSLUpdateStatusReply) {}
    // Credential subject operations
    rpc SaveCredentialSubject (SaveCredentialSubjectRequest) returns (SaveCredentialSubjectReply) {}
}

// Token Status List messages
message TSLAddStatusRequest {
    uint32 Status = 1; // Status value (0=VALID, 1=INVALID, 2=SUSPENDED)
}

message TSLAddStatusReply {
    int64 Section = 1; // Section where the status was added
    int64 Index = 2;   // Index within the section
}

message TSLUpdateStatusRequest {
    int64 Section = 1;  // Section ID
    int64 Index = 2;    // Index within the section
    uint32 Status = 3;  // New status value (0=VALID, 1=INVALID, 2=SUSPENDED)
}

message TSLUpdateStatusReply {
    // Empty reply, success indicated by no error
}

// Credential subject messages
message SaveCredentialSubjectRequest {
    string FirstName = 1;   // Subject's first name
    string LastName = 2;    // Subject's last name
    string DateOfBirth = 3; // Subject's date of birth (YYYY-MM-DD)
    int64 Section = 4;      // Token Status List section
    int64 Index = 5;        // Token Status List index
}

message SaveCredentialSubjectReply {
    // Empty reply, success indicated by no error
}
